Adding POO Algo for the project

--- a/algo.html
+++ b/algo.html
@@ -8,5 +8,5 @@
     <title>Exo 1 Web JS</title>
 </head>
 <body></body>
-<script type="text/javascript" src="./algo.js"></script>
+<script type="text/javascript" src="./algo2.js"></script>
 </html>
